--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
           </div>
         </div>
       </div>
-    <div class="banner">
+    </nav>
+      <div class="banner">
       <div class="container">
         <h1 class="banner-title">
           <span>Art.</span> Design Blog
@@ -41,7 +42,7 @@
       </div>
     </div>
   </header>
-
+  
   <section class="design" id="design">
     <div class="container">
       <div class="title">
@@ -194,7 +195,7 @@
       </div>
     </div>
   </section>
-
+  
   <section class="about" id="about">
     <div class="container">
       <div class="about-content">
@@ -212,7 +213,7 @@
       </div>
     </div>
   </section>
-
+  
   <footer>
     <div class="social-links">
       <a href="https://t.me/xam1dullo"><i class="fab fa-facebook"></i></a>
@@ -222,7 +223,7 @@
     </div>
     <span>Art.Design blog</span>
   </footer>
-
+  
 
 </body>
 </html>
