--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
           </div>
         </div>
       </div>
+      </nav>
     <div class="banner">
       <div class="container">
         <h1 class="banner-title">
